nginx-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-sample-vs
spec:
  hosts:
  - "*"
  gateways:
  - nginx-sample-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-sample-svc
        port:
          number: 80
